--- a/web_export_view/i18n/es.po
+++ b/web_export_view/i18n/es.po
@@ -1,22 +1,27 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * web_export_view
-# 
+#
 # Translators:
-# Pedro M. Baeza <pedro.baeza@gmail.com>, 2016
+# OCA Transbot <transbot@odoo-community.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-23 02:13+0000\n"
-"PO-Revision-Date: 2016-12-23 02:13+0000\n"
-"Last-Translator: Pedro M. Baeza <pedro.baeza@gmail.com>, 2016\n"
+"POT-Creation-Date: 2017-04-28 18:03+0000\n"
+"PO-Revision-Date: 2017-04-28 18:03+0000\n"
+"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#. module: web_export_view
+#: model:res.groups,name:web_export_view.group_disallow_export_view_data_excel
+msgid "Disallow Export View Data to Excel"
+msgstr ""
 
 #. module: web_export_view
 #. openerp-web
@@ -27,14 +32,14 @@ msgstr "Exportar XLS"
 
 #. module: web_export_view
 #. openerp-web
-#: code:addons/web_export_view/static/src/js/web_export_view.js:66
+#: code:addons/web_export_view/static/src/js/web_export_view.js:90
 #, python-format
 msgid "False"
 msgstr "Falso"
 
 #. module: web_export_view
 #. openerp-web
-#: code:addons/web_export_view/static/src/js/web_export_view.js:63
+#: code:addons/web_export_view/static/src/js/web_export_view.js:90
 #, python-format
 msgid "True"
 msgstr "Verdadero"
